MAJOR bugfix on qa.html

--- a/qa.html
+++ b/qa.html
@@ -8,17 +8,12 @@
 <body>
     <h1>q/a</h1>
     <form id="questionForm">
-        <label for="question">question:</label>
+        <label for="question">your question:</label>
         <input type="text" id="question" name="question" required>
-        <br>
         <button type="submit">send</button>
     </form>
-    <br>
-
-    <h1></h1>
-    <p></p>
     <a href="index.html">home</a>
-
     <script src="qa.js"></script>
 </body>
 </html>
+
