minor update on admin.html

--- a/admin.html
+++ b/admin.html
@@ -9,5 +9,6 @@
         <div>
             <a href="accessqa.html">access q/a questions</a>
         </div>
+        <a href="index.html">home</a>
     </body>
 </html>
