--- a/admin.html
+++ b/admin.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>personal website (admin edition)</title>
+        <title>overarching view</title>
     </head>
     <body>
         <h1>
-            admin mode
+            overarching view
         </h1>
         <div>
-            <a href="accessqa.html">access q/a questions</a>
+            <a href="accessqa.html">view q/a questions</a>
         </div>
         <a href="index.html">home</a>
     </body>
