--- a/index.html
+++ b/index.html
@@ -1,22 +1,85 @@
 <html>
     <head>
         <title>personal website</title>
+        <style>
+            body {
+                background-color: #030303;
+                color: white;
+            }
+
+            a {
+                color: white;
+                font-family: 'Times New Roman', Times, serif;
+                font-size: 300%;
+                text-decoration: none;
+                letter-spacing: 0px;
+            }
+
+            .about {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 5%;
+                position: fixed;
+                top: 7.5%
+            }
+            .projects {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 6%;
+                position: fixed;
+                top: 15%
+            }
+            .qa {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 7%;
+                position: fixed;
+                top: 22.5%
+            }
+            .notes {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 8%;
+                position: fixed;
+                top: 30%
+            }
+            .favorites {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 9%;
+                position: fixed;
+                top: 37.5%
+            }
+            .codebreaker {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 10%;
+                position: fixed;
+                top: 45%
+            }
+        </style>
     </head>
     <body>
-        <h1>
-            my personal website!!!
-        </h1>
-        <div>
-            <a href="info.html">info</a>
-        </div>
-        <div>
-            <a href="projects.html">projects + source code</a>
-        </div>
-        <div>
-            <a href="qa.html">Q/A</a>
-        </div>
-        <div>
-            <a href="admin.html">admin mode</a>
-        </div>
+        <a href="about.html" class="about">
+            <font color="#FFFF00">abo</font><font color="#FF0000">ut</font> me
+        </a>
+        <a href="projects.html" class="projects">
+            <font color="#AA00FF">pro</font>jects and s<font color="#FF9900">our</font>ce co<font color="#555555">de</font>
+        </a>
+        <a href="qa.html" class="qa">
+            <font color="#FF0000">q</font>uestion<font color="#0000FF">s</font>
+        </a>
+        <a href="notes.html" class="notes">
+            <font color="#BBBBBB">not</font>es
+        </a>
+        <a href="favorites.html" class="favorites">
+            fav<font color="#FF00FF">ori</font><font color="#0000FF">te</font>s
+        </a>
+        <a href="code.html" class="codebreaker">
+            <font color="#00FF00">code</font>breaker
+        </a>
+        <p>
+            <font color="#030303">@ (LOWERCASE) UPLISON EPLISON UPLISON EPLISON (CAESAR SHIFT OF THREE) GDWH 06-10 06-24 08-05 10-18 02-19 08-23 (LQFOXGH DELTA ALPHA UPLISON SIGMA RQOB)</font>
+        </p>
     </body>
 </html>
