--- a/qa.html
+++ b/qa.html
@@ -7,6 +7,7 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 
         // Your web app's Firebase configuration
@@ -22,17 +23,20 @@
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
         const db = getFirestore(app);
 
         async function saveQuestion(question) {
             try {
-                await addDoc(collection(db, "questions"), {
+                const docRef = await addDoc(collection(db, "questions"), {
                     question: question,
                     timestamp: new Date().getTime()
                 });
+                console.log("Document written with ID: ", docRef.id);
                 alert('Your question has been sent.');
             } catch (e) {
                 console.error("Error adding document: ", e);
+                alert('Error sending your question. Please try again.');
             }
         }
 
@@ -46,7 +50,7 @@
 <body>
     <h1>questions</h1>
     <form id="questionForm">
-        <label for="question">ask me a question</label>
+        <label for="question">ask me a question (currently down)</label>
         <br>
         <input type="text" id="question" name="question" required>
         <br>
