--- a/about.html
+++ b/about.html
@@ -16,10 +16,10 @@
             1. i was born june 10th
         </p>
         <p>
-            2. this site was made in X days (12/21/24 - 12/22/24)
+            2. this site was officially made in 2 days (12/21/24 - 12/23/24)
         </p>
         <p>
-            3. i cant draw
+            3. the questions page was the hardest part of making this (including the codebreaker)
         </p>
         <a href="index.html">home</a>
     </body>
