--- a/favorites.html
+++ b/favorites.html
@@ -1,16 +1,22 @@
 <html>
     <head>
-        <title>projects and source code</title>
+        <title>favorites</title>
     </head>
     <body>
         <h1>
-            projects + source code
+            favorites
         </h1>
         <p>
-            favorite game: any ace attorney game (except investigations)
+            favorite game: ace attorney investigations 2 or the great ace attorney chronicles
         </p>
         <p>
             favorite show: hunter x hunter
+        </p>
+        <p>
+            favorite food: chips
+        </p>
+        <p>
+            favorite drink: root beer
         </p>
         <a href="index.html">home</a>
     </body>
