--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <font color="#00FF00">code</font>breaker
         </a>
         <p>
-            <font color="#030303">@ (LOWERCASE) UPLISON EPLISON UPLISON EPLISON (CAESAR SHIFT OF THREE) GDWH 06-10 06-24 08-05 10-18 02-19 08-23 (LQFOXGH DELTA ALPHA UPLISON SIGMA RQOB)</font>
+            <font color="#030303">@ (LOWERCASE) UPLISON EPLISON UPLISON EPLISON (CAESAR SHIFT OF 3) GDWH 06-10 06-24 08-05 10-18 02-19 08-23 (LQFOXGH GDBV RQOB)</font>
         </p>
     </body>
 </html>
