--- a/notes.html
+++ b/notes.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>projects and source code</title>
+        <title>notes</title>
     </head>
     <body>
         <h1>
