--- a/code.html
+++ b/code.html
@@ -21,7 +21,7 @@
     <br>
     <br>
     <br>
-    <p>HIGHLIGHTER INDEX</p>
+    <p>highlight index</p>
     <script src="codebreaker.js"></script>
 </body>
 </html>
