--- a/favorites.html
+++ b/favorites.html
@@ -13,7 +13,7 @@
             favorite show: hunter x hunter
         </p>
         <p>
-            favorite food: chips
+            favorite food: hot chips
         </p>
         <p>
             favorite drink: root beer
