--- a/admin.html
+++ b/admin.html
@@ -1,6 +1,19 @@
 <html>
     <head>
         <title>overarching view</title>
+        <style>
+            .gavin {
+                position: fixed;
+                bottom: 0%;
+                right: 0%;
+            }
+
+            .bum {
+                position: fixed;
+                bottom: 40%;
+                right: 11%;
+            }
+        </style>
     </head>
     <body>
         <h1>
@@ -9,6 +22,8 @@
         <div>
             <a href="accessqa.html">view q/a questions</a>
         </div>
+        <p class="bum">why he tweakin!!!</p>
         <a href="index.html">home</a>
+        <img src="why_he_tweaking.png" class="gavin" width="30%" height="40%">
     </body>
 </html>
