--- a/qa.html
+++ b/qa.html
@@ -58,5 +58,13 @@
     </form>
     <br>
     <a href="index.html">home</a>
+    <br>
+    <h2>12/23/2024, 3:40:18 PM: well well well</h2>
+    <p>12/23/2024, 3:41 PM:  hi</p>
+    <h2>12/23/2024, 1:50:02 PM: marinara</h2>
+    <p>12/23/2024, 3:40 PM:  kys</p>
+    <h2>12/23/2024, 1:45:41 PM: do you love niggers</h2>
+    <p>12/23/2024, 2:02 PM:  6130 Arlington Webb Rd</p>
+
 </body>
 </html>
