--- a/notes.html
+++ b/notes.html
@@ -11,5 +11,8 @@
         <p>
             12/22/24, 6:22 PM: teacher with an orange room that i hate
         </p>
+        <p>
+            12/23/24, 2:44 PM: break
+        </p>
     </body>
 </html>
