--- a/admin.html
+++ b/admin.html
@@ -11,7 +11,7 @@
             .bum {
                 position: fixed;
                 bottom: 40%;
-                right: 11%;
+                right: 10%;
             }
         </style>
     </head>
@@ -22,7 +22,7 @@
         <div>
             <a href="accessqa.html">view q/a questions</a>
         </div>
-        <p class="bum">why he tweakin!!!</p>
+        <p class="bum">retard can be found below</p>
         <a href="index.html">home</a>
         <img src="why_he_tweaking.png" class="gavin" width="30%" height="40%">
     </body>
