--- a/favorites.html
+++ b/favorites.html
@@ -10,13 +10,19 @@
             favorite game: ace attorney investigations 2 or the great ace attorney chronicles
         </p>
         <p>
-            favorite show: hunter x hunter
+            favorite show: the rookie
         </p>
         <p>
             favorite food: hot chips
         </p>
         <p>
             favorite drink: root beer
+        </p>
+        <p>
+            favorite music artist: bill wurtz
+        </p>
+        <p>
+            favorite movie: the pursuit of happyness or saw 6
         </p>
         <a href="index.html">home</a>
     </body>
