--- a/accessqa.html
+++ b/accessqa.html
@@ -7,7 +7,7 @@
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
-        import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
+        import { getFirestore, collection, getDocs, query, orderBy } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-firestore.js";
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
@@ -25,7 +25,8 @@
         const db = getFirestore(app);
 
         async function displayQuestions() {
-            const querySnapshot = await getDocs(collection(db, "questions"));
+            const q = query(collection(db, "questions"), orderBy("timestamp", "desc"));
+            const querySnapshot = await getDocs(q);
             const questionDisplay = document.getElementById('questionDisplay');
             questionDisplay.innerHTML = '';
 
@@ -38,6 +39,7 @@
             });
         }
 
+        // Call the function to display questions when the page loads
         window.onload = displayQuestions;
     </script>
 </head>
