--- a/code.html
+++ b/code.html
@@ -7,14 +7,32 @@
 </head>
 <body>
     <h1>codebreaker</h1>
+    <p>find the code for a prize!</p>
     <form id="codeForm">
         <label for="question">code: </label>
         <input type="text" id="codeInput" name="code" required>
-        <br>
-        <button type="submit">send</button>
+        <button type="submit">enter</button>
     </form>
     <br>
     <a href="index.html">home</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <br>
     <br>
     <br>
