--- a/qa.html
+++ b/qa.html
@@ -52,12 +52,19 @@
     <form id="questionForm">
         <label for="question">ask me a question (anonymous)</label>
         <br>
+        <br>
         <input type="text" id="question" name="question" required>
         <button type="submit">ask</button>
     </form>
     <br>
     <a href="index.html">home</a>
     <br>
+    <h2>12/24/2024, 9:32:20 PM: worst period?</h2>
+    <p>12/24/2024, 11:38 PM: 7th period and it isnt even close</p>
+    <h2>12/23/2024, 9:25:40 PM: Do you bathe in marinara???</h2>
+    <p>12/23/2024, 9:37 PM: yes</p>
+    <h2>12/23/2024, 9:22:20 PM: what music do you listen to</h2>
+    <p>12/23/2024, 9:36 PM:  free king von he's looking up at us rn 😭😭😭</p>
     <h2>12/23/2024, 3:40:18 PM: well well well</h2>
     <p>12/23/2024, 3:41 PM:  🐔</p>
     <h2>12/23/2024, 1:50:02 PM: marinara</h2>
@@ -67,3 +74,4 @@
 
 </body>
 </html>
+
