--- a/accessqa.html
+++ b/accessqa.html
@@ -57,9 +57,9 @@
 </head>
 <body>
     <h1>access q/a</h1>
-    <div id="questionDisplay"></div>
+    <div id="questionDisplay">
+    </div>
     <p id="count" class="count">question count: 0</p>
     <a href="index.html">home</a>
 </body>
 </html>
-
