--- a/index.html
+++ b/index.html
@@ -50,13 +50,21 @@
                 position: fixed;
                 top: 37.5%
             }
-            .codebreaker {
+            .pi {
                 font-size: 400%;
                 font-family: 'Times New Roman', Times, serif;
                 margin-left: 10%;
                 position: fixed;
                 top: 45%
             }
+            .codebreaker {
+                font-size: 400%;
+                font-family: 'Times New Roman', Times, serif;
+                margin-left: 11%;
+                position: fixed;
+                top: 52.5%
+            }
+            
         </style>
     </head>
     <body>
@@ -74,6 +82,9 @@
         </a>
         <a href="favorites.html" class="favorites">
             fav<font color="#FF00FF">ori</font><font color="#0000FF">te</font>s
+        </a>
+        <a href="pi.html" class="pi">
+            <font color="#FFCCAA">d</font>igits <font color="#004488">of pi</font><font color="#BBBBBB">e</font>
         </a>
         <a href="code.html" class="codebreaker">
             <font color="#00FF00">code</font>breaker
