--- a/qa.html
+++ b/qa.html
@@ -59,6 +59,8 @@
     <br>
     <a href="index.html">home</a>
     <br>
+    <h2>12/28/2024, 8:48:38 PM: What inspired you to code</h2>
+    <p>12/28/2024, 9:35 PM: i forgot</p>
     <h2>12/24/2024, 9:32:20 PM: worst period?</h2>
     <p>12/24/2024, 11:38 PM: 7th period and it isnt even close</p>
     <h2>12/23/2024, 9:25:40 PM: Do you bathe in marinara???</h2>
@@ -74,4 +76,3 @@
 
 </body>
 </html>
-
